--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "license": "ISC",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "hardhat": "^2.22.6"
+    "chai": "^5.1.1",
+    "ethers": "^5.7.2",
+    "hardhat": "^2.22.6",
+    "solidity-coverage": "^0.8.12"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
-    "ethers": "5.4",
     "ipfs-http-client": "^56.0.1",
     "keccak256": "^1.0.6",
     "merkletreejs": "^0.4.0"
