--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   "license": "ISC",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "chai": "^5.1.1",
-    "ethers": "^5.7.2",
+    "@nomiclabs/hardhat-etherscan": "^3.1.8",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
     "hardhat": "^2.22.6",
     "solidity-coverage": "^0.8.12"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
     "axios": "^1.7.2",
+    "chai": "^4.5.0",
     "dotenv": "^16.4.5",
     "ipfs-http-client": "^56.0.1",
     "keccak256": "^1.0.6",
-    "merkletreejs": "^0.4.0"
+    "merkletreejs": "^0.4.0",
+    "multihashes": "^4.0.3"
   }
 }
